--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <body>
     <div class="container">
         <!-- Avatar -->
-        <div class="component">
-            <h1>Avatar</h1>
-                <img class="sm avatar" src="https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg" alt="profile-picture"/>
-            <img class="lg avatar" src="https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg" alt="profile-picture"/>
+        <div id="avatar">
+            <div class="component">
+                <h1>Avatar</h1>
+                    <img class="sm avatar" src="https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg" alt="profile-picture"/>
+                <img class="lg avatar" src="https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg" alt="profile-picture"/>
+            </div>
         </div>
         <!-- Alerts -->
-        <div class="component">
+        <div id="alert"">
             <h1>Alert</h1>
             <div class="alert error">
                 <i class="fas fa-exclamation-circle"></i>
@@ -41,7 +43,7 @@
             </div>
         </div>
         <!-- Badges -->
-        <div class="badge-component">
+        <div id="badge"">
             <h1>Badge</h1>
             <div class="badge-box">
                 <div class="badge-container">
@@ -69,35 +71,37 @@
             </div>
         </div>
         <!-- Buttons -->
-        <div class="button-container">
-            <h1>Buttons</h1>
-            <div class="contained-btn">
-                <h3>Contained button</h3>
-                <button class="btn">DEFAULT</button>
-                <button class="btn primary">PRIMARY</button>
-                <button class="btn secondary">SECONDARY</button>
-                <button class="btn link"><a href="">LINK</a></button>
-                <button disabled class="btn disable">DISABLED</button>
-            </div>
-            <div class="icon-button">
-                <h3>Icon button</h3>
-                <button class="icon-btn">X</button>
-                <button class="icon-btn"><i class="fas fa-trash"></i></button>
-                <button class="icon-btn"><i class="fas fa-cart-plus"></i></button>
-                <button class="icon-btn"><i class="fas fa-user"></i></button>
-                <button class="icon-btn"><i class="fas fa-heart"></i></button>
-            </div>
-            <div class="outlined-btn">
-                <h3>Outlined button</h3>
-                <button class="outline-btn default">DEFAULT</button>
-                <button class="outline-btn primary">PRIMARY</button>
-                <button class="outline-btn secondary">SECONDARY</button>
-                <button class="outline-btn link"><a href="">LINK</a></button>
-                <button disabled class="outline-btn disable">DISABLED</button>
-            </div>
-            <div class="float-button">
-                <h3>Floating action button</h3>
-                <button class="float-btn"><a href="">+</a></button>
+        <div id="button">
+            <div class="button-container">
+                <h1>Buttons</h1>
+                <div class="contained-btn">
+                    <h3>Contained button</h3>
+                    <button class="btn">DEFAULT</button>
+                    <button class="btn primary">PRIMARY</button>
+                    <button class="btn secondary">SECONDARY</button>
+                    <button class="btn link"><a href="">LINK</a></button>
+                    <button disabled class="btn disable">DISABLED</button>
+                </div>
+                <div class="icon-button">
+                    <h3>Icon button</h3>
+                    <button class="icon-btn">X</button>
+                    <button class="icon-btn"><i class="fas fa-trash"></i></button>
+                    <button class="icon-btn"><i class="fas fa-cart-plus"></i></button>
+                    <button class="icon-btn"><i class="fas fa-user"></i></button>
+                    <button class="icon-btn"><i class="fas fa-heart"></i></button>
+                </div>
+                <div class="outlined-btn">
+                    <h3>Outlined button</h3>
+                    <button class="outline-btn default">DEFAULT</button>
+                    <button class="outline-btn primary">PRIMARY</button>
+                    <button class="outline-btn secondary">SECONDARY</button>
+                    <button class="outline-btn link"><a href="">LINK</a></button>
+                    <button disabled class="outline-btn disable">DISABLED</button>
+                </div>
+                <div class="float-button">
+                    <h3>Floating action button</h3>
+                    <button class="float-btn"><a href="">+</a></button>
+                </div>
             </div>
         </div>
         <!-- Cards -->
