creating issue with navbar

--- a/library.html
+++ b/library.html
@@ -692,35 +692,117 @@
             </div>
             <!-- Simplified-grid -->
             <div id="grid">
-                <h1>Grid</h1>
-                <h3>Simplified grid</h3>
+                <h2>Grid</h2>
+                <p class="components">
+                    The Material Design responsive layout grid adapts to screen size and orientation, ensuring consistency across layouts.
+                </p>
+                <p class="components">
+                    The grid creates visual consistency between layouts while allowing flexibility across a wide variety of designs. Material Design’s responsive UI.
+                </p>
+                <h3 class="components">Simplified grid</h3>
+                <p class="components">
+                    This simplified grid is a gallery ui design for an Imange gallery app.
+                </p>
                 <div class="grid-container">
                     <div class="grid-content">
-                        <img class="responsive-image grid-image" src="https://images.unsplash.com/photo-1544979590-37e9b47eb705?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="image loading">
-                        <img class="responsive-image grid-image" src="https://images.unsplash.com/photo-1564166174574-a9666f590437?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="image loading">
-                        <img class="responsive-image grid-image" src="https://images.unsplash.com/photo-1544979590-37e9b47eb705?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="image loading">
-                        <img class="responsive-image grid-image" src="https://images.unsplash.com/photo-1607405766085-1cc985a90d62?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" alt="image loading">
-                        <img class="responsive-image grid-image" src="https://images.unsplash.com/photo-1603672913403-f0e03bb8171a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=282&q=80" alt="image loading">
-                    </div>
-                    <h3>Basic grid</h3>
-                    <div class="grid-container">
-                        <div class="grid-content">
-                            <div
-                             class="grid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet modi dolorum omnis unde consequatur nostrum vel eos ipsa reprehenderit excepturi?
-                            </div>
-                            <div
-                             class="grid">Lorem ipsum dolor sit amet consectet adipisicing elit. Eveniet modi Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, a.allj oidh dij fsdgh.
-                            </div>
-                            <div
-                             class="grid">Lorem ipsum dolor sit amet consectetur adipisicing         elit. Eveniet modi dolorum omnis unde consequatur nostrum vel eos         ipsa reprehenderit excepturi
-                            </div>
-                            <div
-                             class="grid">Lorem ipsum dolor sit amet consectetur adipisicing         elit. Eveniet modi dolorum omnis unde consequatur nostrum vel eos         ipsa reprehenderit excepturi
-                            </div>
-                        </div>
+                        <img class="responsive-image grid-image" src="https://images.unsplash.com/photo-1544979590-37e9b47eb705?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="image loading"/>
+                        <img class="responsive-image grid-image" src="https://images.unsplash.com/photo-1564166174574-a9666f590437?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="image loading"/>
+                        <img class="responsive-image grid-image" src="https://images.unsplash.com/photo-1544979590-37e9b47eb705?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="image loading"/>
+                        <img class="responsive-image grid-image" src="https://images.unsplash.com/photo-1607405766085-1cc985a90d62?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" alt="image loading"/>
+                        <img class="responsive-image grid-image" src="https://images.unsplash.com/photo-1603672913403-f0e03bb8171a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=282&q=80" alt="image loading"/>
                     </div>
                 </div>
+                <pre>
+                    &lt;div class=&quot;grid-container&quot;&gt;
+                        &lt;div class=&quot;grid-content&quot;&gt;
+                            &lt;img class=&quot;responsive-image grid-image&quot; src=&quot;https://images.unsplash.com/photo-1544979590-37e9b47eb705?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80&quot;/&gt;
+                            &lt;img class=&quot;responsive-image grid-image&quot; src=&quot;https://images.unsplash.com/photo-1564166174574-a9666f590437?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80&quot;/&gt;
+                            &lt;img class=&quot;responsive-image grid-image&quot; src=&quot;https://images.unsplash.com/photo-1544979590-37e9b47eb705?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80&quot;/&gt;
+                            &lt;img class=&quot;responsive-image grid-image&quot; src=&quot;https://images.unsplash.com/photo-1607405766085-1cc985a90d62?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80&quot;/&gt;
+                            &lt;img class=&quot;responsive-image grid-image&quot; src=&quot;https://images.unsplash.com/photo-1603672913403-f0e03bb8171a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=282&q=80&quot;/&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                </pre>    
+                <h3 class="components">Basic grid</h3>
+                <p class="components">
+                    This is abasic grid with text containig blocks as a grid container.It uses to show news hunts in a vontainer or e-newspaper block.
+                </p>
+                <div class="grid-container">
+                    <div class="grid-content">
+                        <div
+                         class="grid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet modi dolorum omnis unde consequatur nostrum vel eos ipsa reprehenderit excepturi?
+                        </div>
+                        <div
+                         class="grid">Lorem ipsum dolor sit amet consectet adipisicing elit. Eveniet modi Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, a.allj oidh dij fsdgh.
+                        </div>
+                        <div
+                         class="grid">Lorem ipsum dolor sit amet consectetur   adipisicing         elit. Eveniet modi dolorum omnis unde consequatur nostrum vel eos         ipsa reprehenderit excepturi
+                        </div>
+                        <div
+                         class="grid">Lorem ipsum dolor sit amet consectetur adipisicing         elit. Eveniet modi dolorum omnis unde consequatur nostrum vel eos         ipsa reprehenderit excepturi
+                        </div>
+                    </div>
+                </div> 
+                <pre>
+                    &lt;div class=&quot;grid-container&quot;&gt;
+                        &lt;div class=&quot;grid-content&quot;&gt;
+                         &lt;div class=&quot;grid&quot;&gt;
+                           Lorem ipsum dolor sit amet consectetur adipisicing
+                         &lt;/div&gt;
+                         &lt;div class=&quot;grid&quot;&gt;
+                           Lorem ipsum dolor sit amet consectetur adipisicing
+                         &lt;/div&gt;
+                         &lt;div class=&quot;grid&quot;&gt;
+                           Lorem ipsum dolor sit amet consectetur adipisicing
+                         &lt;/div&gt;
+                         &lt;div class=&quot;grid&quot;&gt;
+                           Lorem ipsum dolor sit amet consectetur adipisicing
+                         &lt;/div&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                </pre>   
             </div>
+            <!-- Text-Utilities -->
+            <div id="Text">
+                <h2>Text Utilities</h2>
+                <div class="text-container">
+                    <p class="heading">
+                        Heading One
+                    </p>
+                    <p class="sub-heading">
+                        Heading Two
+                    </p>
+                    <p class="small-text">
+                        Heading Three
+                    </p>
+                    <p class="gray-text">
+                        Heading Four
+                    </p>
+                    <p class="center-text">
+                        Heading Five
+                    </p>
+                </div>
+                <pre>
+                    &lt;div class=&quot;text-container&quot;&gt;
+                        &lt;p class=&quot;heading&quot;&gt;
+                            Heading One
+                        &lt;/p&gt;
+                        &lt;p class=&quot;sub-heading&quot;&gt;
+                            Heading Two
+                        &lt;/p&gt;
+                        &lt;p class=&quot;small-text&quot;&gt;
+                            Heading Three
+                        &lt;/p&gt;
+                        &lt;p class=&quot;gray-text&quot;&gt;
+                            Heading Four
+                        &lt;/p&gt;
+                        &lt;p class=&quot;center-text&quot;&gt;
+                            Heading Five
+                        &lt;/p&gt;
+                    &lt;/div&gt;    
+                </pre>
+            </div>
+            <!-- Toasts -->
         </div>
     </div>
 </body>
