--- a/library.html
+++ b/library.html
@@ -95,8 +95,8 @@
                         <img class="sm avatar" src="https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg" alt="profile-picture"/>
                     <img class="lg avatar" src="https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg" alt="profile-picture"/>
                 </div>
-                <pre>&lt;img class=&quot;sm avatar&quot src=&quot;https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg&quot;</pre>
-                <pre>&lt;img class=&quot;lg avatar&quot src=&quot;https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg&quot;</pre>
+                <pre>&lt;img class=&quot;sm avatar&quot src=&quot;&quot;</pre>
+                <pre>&lt;img class=&quot;lg avatar&quot src=&quot;&quot;</pre>
             </div>
             <!-- Alerts -->
             <div id="alert"">
@@ -375,7 +375,7 @@
                 <pre>
                     &lt;div class=&quot;card-component&quot;&gt;
                         &lt;div class=&quot;thumbnail&quot;&gt;
-                            &lt; img src=&quot;https://rukminim1.flixcart.com/image/416/416/kpbipow0/office-study-chair/o/h/o/1-plywood-we-13-white-clouds-enterprise-original-imag3kzzptvgbn5y.jpeg?q=70&quot;/&gt;
+                            &lt; img src=&quot;&quot;/&gt;
                             &lt;i class=&quot;fas fa-times&quot;&gt;&lt;/i&gt;
                             &lt;i class=&quot;far fa-heart like&quot;&gt;&lt;/i&gt;
                         &lt;/div&gt;
@@ -390,7 +390,7 @@
                 <pre>
                     &lt;div class=&quot;card-component&quot;&gt;
                     &lt;div class=&quot;thumbnail&quot;&gt;
-                        &lt;img src=&quot;https://rukminim1.flixcart.com/image/416/416/kpbipow0/office-study-chair/o/h/o/1-plywood-we-13-white-clouds-enterprise-original-imag3kzzptvgbn5y.jpeg?q=70&quot;/&gt;
+                        &lt;img src=&quot;&quot;/&gt;
                         &lt;i class=&quot;fas fa-times&quot;&gt;&lt;/&gt;
                         &lt;i class=&quot;far fa-heart like&quot;&gt;&lt;/&gt;
                         &lt;div class=&quot;card-badge&quot;&gt;New &lt;i class=&quot;fas fa-sparkles&quot;&gt;&lt;/&gt;&lt;/div&gt;
@@ -408,7 +408,7 @@
                         &lt;div class=&quot;card-content&quot;&gt;
                             &lt;h2&gt;Heading1&lt;/h2&gt;
                             &lt;h3&gt;Sub-heading1&lt;/h3&gt;
-                            &lt;p&gt;Rajpura Oscar High Back Revolving inventore, vitae vel quas Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat earum et veritatis officia odio consequuntur.&lt;/p&gt;
+                            &lt;p&gt;Fugiat earum et veritatis officia odio consequuntur.&lt;/p&gt;
                         &lt;/div&gt;
                         &lt;button class=&quot;read-btn&quot;&gt;read more...&lt;/button&gt;
                     &lt;/div&gt;
@@ -426,7 +426,7 @@
                 </div>
                 <pre>
                     &lt;div class=&quot;image-container&quot;&gt;
-                        &lt;img class=&quot;responsive-image&quot; src=&quot;https://images.unsplash.com/photo-1471513671800-b09c87e1497c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80&quot;/&gt;
+                        &lt;img class=&quot;responsive-image&quot; src=&quot;&quot;/&gt;
                     &lt;/div&gt;
                 </pre>
                 <h3>Circular images</h3>
@@ -437,7 +437,7 @@
                 class="circular-image"
                 src="https://images.unsplash.com/photo-1570741066052-817c6de995c8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1533&q=80" alt="image loading">
                 <pre>
-                    &lt;img class=&quot;circular-image&quot; src=&quot;https://images.unsplash.com/photo-1471513671800-b09c87e1497c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80&quot;/&gt;
+                    &lt;img class=&quot;circular-image&quot; src=&quot;&quot;/&gt;
                 </pre>
             </div>
             <!-- Inputs -->
@@ -600,7 +600,7 @@
             <!-- <div id="navbar">
                 
             </div> -->
-                <h2>Navbar</h2>
+                <!-- <h2>Navbar</h2>
                 <div 2class="navbar-content">
                     <div class="nav-icon">
                         <img src="Game On.png" alt="Image" class="circular-image image-icon"/>  
@@ -611,7 +611,7 @@
                            <a href="">Docs</a>
                            <a href="">Contact</a>
                     </div>
-                </div>
+                </div> -->
             <!-- Modal -->
             <div id="modal">
                 <h2>Modals</h2>
@@ -628,7 +628,7 @@
                     <pre>
                         &lt;div class=&quot;modal-content&quot;&gt;
                             &lt;h3&gt;Heading for modal&lt;/h3&gt;
-                            &lt;p class=&quot;modal-text&quot;&gt;Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, laboriosam!&lt;/p&gt;
+                            &lt;p class=&quot;modal-text&quot;&gt;Lorem ipsum dolor sit&lt;/p&gt;
                             &lt;button&gt;Delete&lt;/button&gt;
                         &lt;/div&gt;
                     </pre>
@@ -715,11 +715,16 @@
                 <pre>
                     &lt;div class=&quot;grid-container&quot;&gt;
                         &lt;div class=&quot;grid-content&quot;&gt;
-                            &lt;img class=&quot;responsive-image grid-image&quot; src=&quot;https://images.unsplash.com/photo-1544979590-37e9b47eb705?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80&quot;/&gt;
-                            &lt;img class=&quot;responsive-image grid-image&quot; src=&quot;https://images.unsplash.com/photo-1564166174574-a9666f590437?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80&quot;/&gt;
-                            &lt;img class=&quot;responsive-image grid-image&quot; src=&quot;https://images.unsplash.com/photo-1544979590-37e9b47eb705?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80&quot;/&gt;
-                            &lt;img class=&quot;responsive-image grid-image&quot; src=&quot;https://images.unsplash.com/photo-1607405766085-1cc985a90d62?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80&quot;/&gt;
-                            &lt;img class=&quot;responsive-image grid-image&quot; src=&quot;https://images.unsplash.com/photo-1603672913403-f0e03bb8171a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=282&q=80&quot;/&gt;
+                            &lt;img class=&quot;responsive-image grid-image&quot;
+                             src=&quot;&quot;/&gt;
+                            &lt;img class=&quot;responsive-image grid-image&quot;
+                             src=&quot;&quot;/&gt;
+                            &lt;img class=&quot;responsive-image grid-image&quot;
+                             src=&quot;&quot;/&gt;
+                            &lt;img class=&quot;responsive-image grid-image&quot;
+                             src=&quot;&quot;/&gt;
+                            &lt;img class=&quot;responsive-image grid-image&quot;
+                             src=&quot;&quot;/&gt;
                         &lt;/div&gt;
                     &lt;/div&gt;
                 </pre>    
