making image visible

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div id="avatar">
             <div class="component">
                 <h1>Avatar</h1>
-                    <img class="sm avatar" src="https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg" alt="profile-picture"/>
-                <img class="lg avatar" src="https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg" alt="profile-picture"/>
+                    <img class="sm avatar" src="https://images.unsplash.com/photo-1570741066052-817c6de995c8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1533&q=80" alt="profile-picture"/>
+                <img class="lg avatar" src="https://images.unsplash.com/photo-1570741066052-817c6de995c8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1533&q=80" alt="profile-picture"/>
             </div>
         </div>
         <!-- Alerts -->
