--- a/library.html
+++ b/library.html
@@ -92,8 +92,8 @@
                 <h2 class="components">Avatar</h2>
                 <p class="components">An avatar represents many role like (it uses as a profile picture,user picture, icon picture or many uses),So it completly depends on user. It has 2D as well as 3D usage like for social media icon, etc..</p>
                 <div class="avatar-component">
-                        <img class="sm avatar" src="https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg" alt="profile-picture"/>
-                    <img class="lg avatar" src="https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg" alt="profile-picture"/>
+                        <img class="sm avatar" src="https://images.unsplash.com/photo-1570741066052-817c6de995c8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1533&q=80" alt="profile-picture"/>
+                    <img class="lg avatar" src="https://images.unsplash.com/photo-1570741066052-817c6de995c8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1533&q=80" alt="profile-picture"/>
                 </div>
                 <pre>&lt;img class=&quot;sm avatar&quot src=&quot;&quot;</pre>
                 <pre>&lt;img class=&quot;lg avatar&quot src=&quot;&quot;</pre>
@@ -176,7 +176,7 @@
                         <div class="badge">97</div>
                     </div>
                     <div class="badge-container">
-                        <img class="sm avatar" src="https://pbs.twimg.com/profile_images/1404334078388670466/DgO3WL4S_400x400.jpg" alt="profile-picture"/>
+                        <img class="sm avatar" src="https://images.unsplash.com/photo-1570741066052-817c6de995c8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1533&q=80" alt="profile-picture"/>
                         <div class="avatar-badge badge">06</div>
                     </div>
                 </div>
